поля final и проверка на null